--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,7 @@ html{
 body{
     background: #efefef;
 }
-/* #e3e6e6 */
 
-.shadowc{
+.shadow-c{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
 }
